force-app/main/default/objects/Opportunity/fields/Additional_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Reason_Details__c</fullName>
    <label>Additional Reason Details</label>
    <type>TextArea</type>
</CustomField>