force-app/main/default/objects/Opportunity/fields/Biz_Dev_ToBeDelete__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_ToBeDelete__c</fullName>
    <label>Biz Dev (To Be Delete)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>