force-app/main/default/objects/Opportunity/fields/bizdevsupport__c.field-meta.xml
<CustomField>
    <fullName>bizdevsupport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>