force-app/main/default/objects/Opportunity/fields/Company_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Company_Initiative__c</fullName>
    <label>Company Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation Study</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Q4 Partner SPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>