force-app/main/default/objects/Opportunity/fields/Competitor_Intel__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Intel__c</fullName>
    <label>Competitor Intel</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>