force-app/main/default/objects/Opportunity/fields/Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>Crop_Type__c</fullName>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Crop_Type</valueSetName>
    </valueSet>
</CustomField>