force-app/main/default/objects/Opportunity/fields/Crop_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Crop_Type_Details__c</fullName>
    <label>Crop Type Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Crop_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Market_Details</valueSetName>
    </valueSet>
</CustomField>