force-app/main/default/objects/Opportunity/fields/CSC_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CSC_Team_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSC Team Assignment</label>
    <type>Checkbox</type>
</CustomField>