force-app/main/default/objects/Opportunity/fields/Cultivation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Stage__c</fullName>
    <label>Cultivation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cultivation_Stage</valueSetName>
    </valueSet>
</CustomField>