force-app/main/default/objects/Opportunity/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <formula>TEXT(Account.Customer_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>