force-app/main/default/objects/Opportunity/fields/Designed_tier_pricing__c.field-meta.xml
<CustomField>
    <fullName>Designed_tier_pricing__c</fullName>
    <label>SPA Tiered Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>