force-app/main/default/objects/Opportunity/fields/Distributor_Rep__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Distributor Rep)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>