force-app/main/default/objects/Opportunity/fields/Estimated_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Installation_Date__c</fullName>
    <inlineHelpText>Date that the lights are expected to be operational with plants growing under them.</inlineHelpText>
    <label>Estimated Installation Date</label>
    <type>Date</type>
</CustomField>