force-app/main/default/objects/Opportunity/fields/External_InforCRM_ID__c.field-meta.xml
<CustomField>
    <fullName>External_InforCRM_ID__c</fullName>
    <externalId>true</externalId>
    <label>External InforCRM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>