force-app/main/default/objects/Opportunity/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>Factory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>OKDO</fullName>
            </value>
            <value>
                <fullName>Eindhoven</fullName>
            </value>
            <value>
                <fullName>Light Engine</fullName>
            </value>
            <value>
                <fullName>Maxway</fullName>
            </value>
            <value>
                <fullName>Uberherrn Stock</fullName>
                <isActive>false</isActive>
                <label>Uberherrn Stock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>