force-app/main/default/objects/Opportunity/fields/Financing_Status__c.field-meta.xml
<CustomField>
    <fullName>Financing_Status__c</fullName>
    <label>Financing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financing_Status</valueSetName>
    </valueSet>
</CustomField>