force-app/main/default/objects/Opportunity/fields/Forecast_to_GUF__c.field-meta.xml
<CustomField>
    <fullName>Forecast_to_GUF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast to GUF?</label>
    <type>Checkbox</type>
</CustomField>