force-app/main/default/objects/Opportunity/fields/Forecasting_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Scenario__c</fullName>
    <label>Forecasting Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Best</fullName>
            </value>
            <value>
                <fullName>--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>