force-app/main/default/objects/Opportunity/fields/High_Value_Account__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Account__c</fullName>
    <formula>Account.High_Value_Account__c</formula>
    <label>High Value Account</label>
    <type>Checkbox</type>
</CustomField>