force-app/main/default/objects/Opportunity/fields/HS_Support__c.field-meta.xml
<CustomField>
    <fullName>HS_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>