force-app/main/default/objects/Opportunity/fields/Known_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Known_Vendors__c</fullName>
    <label>Known Vendors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>