force-app/main/default/objects/Opportunity/fields/LDRF_Case__c.field-meta.xml
<CustomField>
    <fullName>LDRF_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDRF Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Case.Opportunity__c</valueField>
        </filterItems>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LDRF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>