force-app/main/default/objects/Opportunity/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License_Status</valueSetName>
    </valueSet>
</CustomField>