force-app/main/default/objects/Opportunity/fields/MSA_special_pricing_applies__c.field-meta.xml
<CustomField>
    <fullName>MSA_special_pricing_applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA special pricing applies</label>
    <type>Checkbox</type>
</CustomField>