force-app/main/default/objects/Opportunity/fields/No_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>No_of_Quotes__c</fullName>
    <label>No. of Quotes</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>