force-app/main/default/objects/Opportunity/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Account.Id + Opportunity&apos;s Name to avoid duplicate opp name</description>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>