force-app/main/default/objects/Opportunity/fields/Opportunity_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_Comments__c</fullName>
    <label>Opportunity Status Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>