force-app/main/default/objects/Opportunity/fields/OpportunityBlocked__c.field-meta.xml
<CustomField>
    <fullName>OpportunityBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to inform if Opportunity is blocked to changes or not.</description>
    <label>Opportunity Blocked ?</label>
    <type>Checkbox</type>
</CustomField>