force-app/main/default/objects/Opportunity/fields/Order_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Commit_Date__c</fullName>
    <label>Order Commit Date</label>
    <type>Date</type>
</CustomField>