force-app/main/default/objects/Opportunity/fields/Possible_Pull_In__c.field-meta.xml
<CustomField>
    <fullName>Possible_Pull_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Pull In</label>
    <type>Checkbox</type>
</CustomField>