force-app/main/default/objects/Opportunity/fields/Probablity__c.field-meta.xml
<CustomField>
    <fullName>Probablity__c</fullName>
    <label>Probablity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>