force-app/main/default/objects/Opportunity/fields/Project_City__c.field-meta.xml
<CustomField>
    <fullName>Project_City__c</fullName>
    <label>Project City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>