force-app/main/default/objects/Opportunity/fields/Project_Country__c.field-meta.xml
<CustomField>
    <fullName>Project_Country__c</fullName>
    <label>Project Country DON&apos;T USE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>