force-app/main/default/objects/Opportunity/fields/Project_Countryy__c.field-meta.xml
<CustomField>
    <fullName>Project_Countryy__c</fullName>
    <label>Project Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>