force-app/main/default/objects/Opportunity/fields/Project_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Postal_Code__c</fullName>
    <label>Project Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>