force-app/main/default/objects/Opportunity/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State DON&apos;T USE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>