force-app/main/default/objects/Opportunity/fields/Project_State_New__c.field-meta.xml
<CustomField>
    <fullName>Project_State_New__c</fullName>
    <label>Project State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Countryy__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Picklists</valueSetName>
    </valueSet>
</CustomField>