force-app/main/default/objects/Opportunity/fields/Project_Street__c.field-meta.xml
<CustomField>
    <fullName>Project_Street__c</fullName>
    <label>Project Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>