force-app/main/default/objects/Opportunity/fields/Projected_Install__c.field-meta.xml
<CustomField>
    <fullName>Projected_Install__c</fullName>
    <label>Projected Install</label>
    <type>Date</type>
</CustomField>