force-app/main/default/objects/Opportunity/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <label>Promotion Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Promotion_Code</valueSetName>
    </valueSet>
</CustomField>