force-app/main/default/objects/Opportunity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CapEx</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>Technical Features</fullName>
            </value>
            <value>
                <fullName>Portfolio Gap</fullName>
            </value>
            <value>
                <fullName>Relationships/Politics</fullName>
            </value>
            <value>
                <fullName>Quality Issues</fullName>
            </value>
            <value>
                <fullName>Late Entry</fullName>
            </value>
            <value>
                <fullName>Lack of LED Experience</fullName>
            </value>
            <value>
                <fullName>Lack of Reference</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No License</fullName>
            </value>
            <value>
                <fullName>Lost Facility/Property</fullName>
            </value>
            <value>
                <fullName>Lost Budget/Financing</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Salesmanship</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Product/Product Feature(s)</fullName>
            </value>
            <value>
                <fullName>Horticulture Services</fullName>
            </value>
            <value>
                <fullName>Rebate Services</fullName>
            </value>
            <value>
                <fullName>Solution Architects</fullName>
            </value>
            <value>
                <fullName>Relationship/Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>