force-app/main/default/objects/Opportunity/fields/Rebate_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Initiative__c</fullName>
    <label>Rebate Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>XCEL 2023</fullName>
            </value>
            <value>
                <fullName>XCEL Minnesota 2023</fullName>
            </value>
            <value>
                <fullName>Consumers Energy New-build 2023</fullName>
            </value>
            <value>
                <fullName>Ameren 2023</fullName>
                <isActive>false</isActive>
                <label>Ameren 2023</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>