force-app/main/default/objects/Opportunity/fields/Rebate_Partner__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Partner__c</fullName>
    <label>Rebate Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green Rebates</fullName>
            </value>
            <value>
                <fullName>Grow Rebates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>