force-app/main/default/objects/Opportunity/fields/Registering_Deal_on_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Registering_Deal_on_Behalf_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registering Deal on Behalf Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Registering Deal on Behalf Of)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>