force-app/main/default/objects/Opportunity/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>Based on the User Sales team</description>
    <formula>TEXT( Owner.Sales_Team__c )</formula>
    <inlineHelpText>Based on the User Sales team</inlineHelpText>
    <label>Opportunity Sales Team</label>
    <type>Text</type>
</CustomField>