force-app/main/default/objects/Opportunity/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <label>SAP Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>