force-app/main/default/objects/Opportunity/fields/Size_of_Grow__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Grow__c</fullName>
    <label>Size of Grow</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>