force-app/main/default/objects/Opportunity/fields/Skip_Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Skip_Approval_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Approval Step</label>
    <type>Checkbox</type>
</CustomField>