force-app/main/default/objects/Opportunity/fields/SPA_Approved__c.field-meta.xml
<CustomField>
    <fullName>SPA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Approved ?</label>
    <type>Checkbox</type>
</CustomField>