force-app/main/default/objects/Opportunity/fields/SPA_form_needed__c.field-meta.xml
<CustomField>
    <fullName>SPA_form_needed__c</fullName>
    <formula>IF(OR(Amount &lt; Walk_Away_Price__c, AND((Amount=0),(Walk_Away_Price__c= 0))), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA form needed ?</label>
    <type>Checkbox</type>
</CustomField>