force-app/main/default/objects/Opportunity/fields/SPA_Override__c.field-meta.xml
<CustomField>
    <fullName>SPA_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Override</label>
    <type>Checkbox</type>
</CustomField>