force-app/main/default/objects/Opportunity/fields/SPM__c.field-meta.xml
<CustomField>
    <fullName>SPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>