force-app/main/default/objects/Opportunity/fields/SUG_OPPORTUNITYID__c.field-meta.xml
<CustomField>
    <fullName>SUG_OPPORTUNITYID__c</fullName>
    <label>SUG OPPORTUNITYID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>