force-app/main/default/objects/Opportunity/fields/TECH_Account_Partner_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>TECH_Account_Partner_Status_Formula__c</fullName>
    <formula>TEXT(Account.Partner_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Partner Status Formula</label>
    <type>Text</type>
</CustomField>