force-app/main/default/objects/Opportunity/fields/TECH_Account_Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>TECH_Account_Region_Formula__c</fullName>
    <formula>TEXT(Account.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region Formula</label>
    <type>Text</type>
</CustomField>