force-app/main/default/objects/Opportunity/fields/TECH_Amount_Converted__c.field-meta.xml
<CustomField>
    <fullName>TECH_Amount_Converted__c</fullName>
    <formula>Amount/CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>