force-app/main/default/objects/Opportunity/fields/TECH_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>TECH_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>