force-app/main/default/objects/Opportunity/fields/TECH_Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Approval_Status_Date__c</fullName>
    <label>Approval Status Date</label>
    <type>Date</type>
</CustomField>