force-app/main/default/objects/Opportunity/fields/TECH_Sales_Leadership__c.field-meta.xml
<CustomField>
    <fullName>TECH_Sales_Leadership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Leadership</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>