force-app/main/default/objects/Opportunity/fields/Type_of_Trial__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Trial__c</fullName>
    <label>Type of Trial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HS Trial</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Sales Sample</fullName>
            </value>
            <value>
                <fullName>BD Sample</fullName>
            </value>
            <value>
                <fullName>Validation Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>