force-app/main/default/objects/Opportunity/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Pertains to the size of the grow.</description>
    <inlineHelpText>Pertains to the size of the grow.</inlineHelpText>
    <label>Units Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units</valueSetName>
    </valueSet>
</CustomField>