force-app/main/default/objects/Opportunity/fields/Weekly_Update__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Update__c</fullName>
    <label>Weekly Update</label>
    <type>TextArea</type>
</CustomField>